# mandelbrot-comparison

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
C/: .gitignore  CMakeLists.txt  Makefile  mandelbrot.c
C++/: CMakeLists.txt  mandelbrot.cpp  mandelbrot_async.cpp
PHP/: mandelbrot.php
Python/: mandelbrot.py
Python2/: mandelbrot.py
Python3/: mandelbrot.py
Swift/: CMakeLists.txt  Makefile  main.swift  mandelbrot.swift
Swift/MandelbrotApp/MandelbrotApp/: main.swift
cmake/: DefaultCompilerOptions.cmake  DefaultCompilerOptionsAndWarnings.cmake  DefaultCompilerWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
gradients/: benchmark.gradient  blue.gradient  blue_white.gradient  green.gradient  grey.gradient  orange.gradient
